--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="style.css">
   <script defer src="face-api.min.js"></script>
   <script defer src="script.js"></script>
+  <script defer src="handen.js"></script>
   
 </head>
 <body>
   <video id="video" width="720" height="560" autoplay muted></video>
+  
+  <video class="input_video"></video>
+  <canvas class="output_canvas" width="720px" height="560px"></canvas>
 
   <h1 id="emotie"></h1>
 </body>
